# cura-medical-chatbot

./: Dockerfile  README.md  app_flask.bak  install_log.txt  out.txt  pip_err.txt  pip_error.txt  pyproject.toml  requirements.txt  run_backend.py  store_index.py
.github/workflows/: deploy.yml
app/: main.py
app/api/: chat.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/models/: chat.py
app/rag/: memory.py  pinecone_store.py  pipeline.py  retriever.py
app/services/: safety.py
data/: all_docs.pkl
frontend/: index.html  npm_output.txt
frontend/src/: App.jsx
frontend/src/components/: Disclaimer.jsx  SourceCard.jsx
frontend/src/hooks/: useChat.js
infra/: docker-compose.yml
ingestion/: chunking.py  store_index.py
src/: helper.py
